Add glyphs, presets, virtual keyboard & UI tweaks
Introduce controller glyph set and presets, virtual keyboard flow, and large client UI/refactor changes. Adds ControllerGlyphService/ControllerGlyphSet for mapping logical bindings to platform glyphs, and a ControllerPreset enum that applies grouped tuning profiles. VirtualKeyboardLauncher now opens an in-game ControllerVirtualKeyboardScreen (with cooldown/pending logic) instead of launching the OSK. Settings were overhauled: new sections, headers, widget hints/categories, live input preview, preset buttons, invert-Y and diagnostics toggles, renamed/reshaped sliders, and improved scroll/spacing behavior. Config schema bumped to 6 with new fields (activePreset, lookAntiDeadzone, invertLookY) and updated sanitation/migration (ControllerPreset normalization, clamping). HUD/render registration switched to HudElementRegistry and ScreenEvents; inventory highlight renderer and other renderers/screens were integrated. Misc: Gson strictness set to LENIENT and various small layout/value tweaks across client classes.