@@ -7,7 +7,9 @@ import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.gui.screen.ingame.HandledScreen;
 import net.minecraft.client.gui.widget.AlwaysSelectedEntryListWidget;
 import net.minecraft.client.gui.widget.ClickableWidget;
+import net.minecraft.client.gui.widget.PressableWidget;
 import net.minecraft.client.gui.widget.SliderWidget;
+import net.minecraft.client.gui.widget.TextFieldWidget;
 import net.minecraft.client.input.KeyInput;
 import net.minecraft.client.input.MouseInput;
 import net.minecraft.screen.slot.Slot;
@@ -16,14 +18,31 @@ import org.lwjgl.glfw.GLFW;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.function.Consumer;
 
 public final class GuiNavigationController {
+    private static final int SLOT_ROW_TOLERANCE = 10;
+    private static final int SLOT_TARGET_ROW_TOLERANCE = 6;
+    private static final long CONTROLLER_CURSOR_CAPTURE_TIMEOUT_MS = 2200L;
+    private final ControllerInventorySelectionState inventorySelectionState;
     private Screen lastScreen;
     private int selectedIndex = -1;
     private int selectedHandledSlotId = -1;
     private boolean preferListFocus;
+    private boolean controllerCursorCaptured;
+    private long lastControllerUiInputMs;
 
-    public void onScreenTick(MinecraftClient client, GuiInputFrame inputFrame) {
+    public GuiNavigationController(ControllerInventorySelectionState inventorySelectionState) {
+        this.inventorySelectionState = inventorySelectionState == null
+            ? new ControllerInventorySelectionState()
+            : inventorySelectionState;
+    }
+
+    public void onScreenTick(
+        MinecraftClient client,
+        GuiInputFrame inputFrame,
+        Consumer<Boolean> virtualKeyboardRequest
+    ) {
         if (client == null || client.currentScreen == null || inputFrame == null) {
             return;
         }
@@ -33,8 +52,12 @@ public final class GuiNavigationController {
         if (screenChanged) {
             selectedIndex = -1;
             selectedHandledSlotId = -1;
+            inventorySelectionState.onScreenChanged(screen);
         }
         lastScreen = screen;
+        if (inputFrame.anyNavigation()) {
+            lastControllerUiInputMs = System.currentTimeMillis();
+        }
 
         AlwaysSelectedEntryListWidget<?> listWidget = findListWidget(screen);
         if (screenChanged) {
@@ -43,12 +66,22 @@ public final class GuiNavigationController {
             preferListFocus = false;
         } else if (inputFrame.left() || inputFrame.right() || inputFrame.tabNext() || inputFrame.tabPrev()) {
             preferListFocus = false;
-        } else if (inputFrame.up() || inputFrame.down() || inputFrame.confirm() || inputFrame.pageNext() || inputFrame.pagePrev()) {
+        } else if (inputFrame.up() || inputFrame.down() || inputFrame.pageNext() || inputFrame.pagePrev()) {
+            preferListFocus = true;
+        } else if (inputFrame.confirm() && screen.getFocused() == listWidget) {
             preferListFocus = true;
         }
 
-        if (screen instanceof HandledScreen<?> handledScreen) {
-            boolean handledInventoryNavigation = handleHandledScreenNavigation(client, handledScreen, inputFrame, screenChanged);
+        boolean focusedTextInput = screen.getFocused() instanceof TextFieldWidget;
+        if (screen instanceof HandledScreen<?> handledScreen && !focusedTextInput) {
+            boolean captureCursor = (System.currentTimeMillis() - lastControllerUiInputMs) <= CONTROLLER_CURSOR_CAPTURE_TIMEOUT_MS;
+            boolean handledInventoryNavigation = handleHandledScreenNavigation(
+                client,
+                handledScreen,
+                inputFrame,
+                screenChanged,
+                captureCursor
+            );
             if (handledInventoryNavigation) {
                 if (inputFrame.back()) {
                     triggerBack(screen);
@@ -56,6 +89,7 @@ public final class GuiNavigationController {
                 return;
             }
         }
+        releaseControllerCursorCapture(client);
 
         boolean listNavigationActive = handleListNavigation(screen, listWidget, inputFrame, preferListFocus);
         List<GuiFocusElement> focusElements = collectFocusElements(screen);
@@ -78,9 +112,17 @@ public final class GuiNavigationController {
         if (selectedIndex < 0 || selectedIndex >= focusElements.size()) {
             selectedIndex = 0;
         }
+        selectedIndex = ensureValidSelection(screen, focusElements, selectedIndex);
+        applySelection(screen, focusElements, selectedIndex);
 
         if (screen instanceof BetterControllerSettingsScreen) {
-            selectedIndex = handleLinearSettingsNavigation(screen, focusElements, selectedIndex, inputFrame);
+            selectedIndex = handleLinearSettingsNavigation(
+                screen,
+                focusElements,
+                selectedIndex,
+                inputFrame,
+                virtualKeyboardRequest
+            );
             return;
         }
 
@@ -104,7 +146,7 @@ public final class GuiNavigationController {
         applySelection(screen, focusElements, selectedIndex);
 
         if (inputFrame.confirm()) {
-            triggerConfirm(focusElements.get(selectedIndex));
+            triggerConfirm(focusElements.get(selectedIndex), virtualKeyboardRequest);
         }
         if (inputFrame.back()) {
             triggerBack(screen);
@@ -137,35 +179,48 @@ public final class GuiNavigationController {
         selectedIndex = -1;
         selectedHandledSlotId = -1;
         preferListFocus = false;
+        controllerCursorCaptured = false;
+        lastControllerUiInputMs = 0L;
+        inventorySelectionState.clear();
     }
 
     private boolean handleHandledScreenNavigation(
         MinecraftClient client,
         HandledScreen<?> handledScreen,
         GuiInputFrame inputFrame,
-        boolean screenChanged
+        boolean screenChanged,
+        boolean captureCursor
     ) {
         boolean hasInventoryNavigationInput = inputFrame.up()
             || inputFrame.down()
             || inputFrame.left()
             || inputFrame.right()
             || inputFrame.confirm();
-        if (!hasInventoryNavigationInput && !screenChanged) {
-            return false;
-        }
 
         List<Slot> slots = collectNavigableSlots(handledScreen);
         if (slots.isEmpty()) {
+            releaseControllerCursorCapture(client);
             return false;
         }
+
+        updateControllerCursorCapture(client, captureCursor, inputFrame.anyNavigation());
 
         if (screenChanged || findSlotById(slots, selectedHandledSlotId) == null) {
             Slot initial = resolveInitialSlot(client, slots);
             selectedHandledSlotId = initial.id;
         }
 
+        Slot selectedSlot = findSlotById(slots, selectedHandledSlotId);
+        if (selectedSlot == null) {
+            selectedSlot = slots.get(0);
+            selectedHandledSlotId = selectedSlot.id;
+        }
+        inventorySelectionState.setSelectedSlot(handledScreen, selectedSlot);
+
         if (!hasInventoryNavigationInput) {
-            return false;
+            // Keep controller selection authoritative every tick on handled screens,
+            // otherwise vanilla mouse hover can steal focus after a pickup/place action.
+            return true;
         }
 
         if (inputFrame.up()) {
@@ -178,7 +233,12 @@ public final class GuiNavigationController {
             selectedHandledSlotId = findDirectionalSlotId(slots, selectedHandledSlotId, 1, 0);
         }
 
-        Slot selectedSlot = findSlotById(slots, selectedHandledSlotId);
+        selectedSlot = findSlotById(slots, selectedHandledSlotId);
+        if (selectedSlot == null) {
+            selectedSlot = slots.get(0);
+            selectedHandledSlotId = selectedSlot.id;
+        }
+        inventorySelectionState.setSelectedSlot(handledScreen, selectedSlot);
         if (inputFrame.confirm()) {
             clickHandledSlot(client, handledScreen, selectedSlot);
         }
@@ -195,12 +255,14 @@ public final class GuiNavigationController {
             return false;
         }
 
-        boolean listInput = inputFrame.up()
+        boolean directionalOrPage = inputFrame.up()
             || inputFrame.down()
-            || inputFrame.confirm()
             || inputFrame.pageNext()
             || inputFrame.pagePrev();
-        if (!listInput) {
+        boolean listFocused = screen.getFocused() == listWidget;
+        boolean routeToList = (preferListFocus && directionalOrPage)
+            || (listFocused && (directionalOrPage || inputFrame.confirm()));
+        if (!routeToList) {
             return false;
         }
 
@@ -233,15 +295,16 @@ public final class GuiNavigationController {
                 || used;
         }
 
-        // Keep list navigation authoritative to avoid falling through to bottom buttons.
-        return true;
+        // Only consume when we actually routed a list action, so focused buttons still receive confirm.
+        return used || routeToList;
     }
 
     private static int handleLinearSettingsNavigation(
         Screen screen,
         List<GuiFocusElement> focusElements,
         int selectedIndex,
-        GuiInputFrame inputFrame
+        GuiInputFrame inputFrame,
+        Consumer<Boolean> virtualKeyboardRequest
     ) {
         if (focusElements.isEmpty()) {
             return selectedIndex;
@@ -266,7 +329,7 @@ public final class GuiNavigationController {
             }
         } else {
             if (inputFrame.confirm()) {
-                triggerConfirm(selected);
+                triggerConfirm(selected, virtualKeyboardRequest);
             }
         }
 
@@ -355,10 +418,39 @@ public final class GuiNavigationController {
         return bestIndex;
     }
 
+    private static int ensureValidSelection(Screen screen, List<GuiFocusElement> focusElements, int selectedIndex) {
+        if (focusElements.isEmpty()) {
+            return -1;
+        }
+
+        if (selectedIndex >= 0 && selectedIndex < focusElements.size()) {
+            ClickableWidget selectedWidget = focusElements.get(selectedIndex).widget();
+            if (selectedWidget.active && selectedWidget.visible) {
+                return selectedIndex;
+            }
+        }
+
+        int focusedIndex = findInitialSelectionIndex(screen, focusElements);
+        if (focusedIndex >= 0 && focusedIndex < focusElements.size()) {
+            return focusedIndex;
+        }
+        return 0;
+    }
+
     private static int findDirectionalSlotId(List<Slot> slots, int currentId, int directionX, int directionY) {
         Slot current = findSlotById(slots, currentId);
         if (current == null) {
-            return slots.getFirst().id;
+            return slots.get(0).id;
+        }
+
+        Slot rowColumnCandidate = findRowColumnNeighborSlot(slots, current, directionX, directionY);
+        if (rowColumnCandidate != null) {
+            return rowColumnCandidate.id;
+        }
+
+        Slot laneCandidate = findLaneAlignedSlot(slots, current, directionX, directionY);
+        if (laneCandidate != null) {
+            return laneCandidate.id;
         }
 
         int currentCenterX = current.x + 8;
@@ -391,6 +483,168 @@ public final class GuiNavigationController {
         return best.id;
     }
 
+    private static Slot findRowColumnNeighborSlot(List<Slot> slots, Slot current, int directionX, int directionY) {
+        if (slots == null || current == null || (directionX == 0 && directionY == 0)) {
+            return null;
+        }
+
+        int currentCenterX = current.x + 8;
+        int currentCenterY = current.y + 8;
+
+        if (directionX != 0) {
+            Slot best = null;
+            int bestPrimary = Integer.MAX_VALUE;
+            int bestSecondary = Integer.MAX_VALUE;
+            for (Slot candidate : slots) {
+                if (candidate == null || candidate.id == current.id) {
+                    continue;
+                }
+                int deltaX = (candidate.x + 8) - currentCenterX;
+                int deltaY = (candidate.y + 8) - currentCenterY;
+                if (directionX < 0 && deltaX >= 0) continue;
+                if (directionX > 0 && deltaX <= 0) continue;
+
+                int rowDistance = Math.abs(deltaY);
+                if (rowDistance > SLOT_ROW_TOLERANCE) {
+                    continue;
+                }
+
+                int columnDistance = Math.abs(deltaX);
+                if (columnDistance < bestPrimary || (columnDistance == bestPrimary && rowDistance < bestSecondary)) {
+                    bestPrimary = columnDistance;
+                    bestSecondary = rowDistance;
+                    best = candidate;
+                }
+            }
+            return best;
+        }
+
+        int nearestTargetRowDistance = Integer.MAX_VALUE;
+        Integer targetRowCenterY = null;
+        for (Slot candidate : slots) {
+            if (candidate == null || candidate.id == current.id) {
+                continue;
+            }
+            int deltaY = (candidate.y + 8) - currentCenterY;
+            if (directionY < 0 && deltaY >= 0) continue;
+            if (directionY > 0 && deltaY <= 0) continue;
+            int rowDistance = Math.abs(deltaY);
+            if (rowDistance < nearestTargetRowDistance) {
+                nearestTargetRowDistance = rowDistance;
+                targetRowCenterY = candidate.y + 8;
+            }
+        }
+        if (targetRowCenterY == null) {
+            return null;
+        }
+
+        Slot best = null;
+        int bestPrimary = Integer.MAX_VALUE;
+        int bestSecondary = Integer.MAX_VALUE;
+        for (Slot candidate : slots) {
+            if (candidate == null || candidate.id == current.id) {
+                continue;
+            }
+            int candidateCenterX = candidate.x + 8;
+            int candidateCenterY = candidate.y + 8;
+            int deltaY = candidateCenterY - currentCenterY;
+            if (directionY < 0 && deltaY >= 0) continue;
+            if (directionY > 0 && deltaY <= 0) continue;
+
+            int targetRowDistance = Math.abs(candidateCenterY - targetRowCenterY);
+            if (targetRowDistance > SLOT_TARGET_ROW_TOLERANCE) {
+                continue;
+            }
+
+            int columnDistance = Math.abs(candidateCenterX - currentCenterX);
+            int rowDistance = Math.abs(deltaY);
+            if (columnDistance < bestPrimary || (columnDistance == bestPrimary && rowDistance < bestSecondary)) {
+                bestPrimary = columnDistance;
+                bestSecondary = rowDistance;
+                best = candidate;
+            }
+        }
+
+        if (best != null) {
+            return best;
+        }
+
+        Slot fallback = null;
+        int fallbackPrimary = Integer.MAX_VALUE;
+        int fallbackSecondary = Integer.MAX_VALUE;
+        for (Slot candidate : slots) {
+            if (candidate == null || candidate.id == current.id) {
+                continue;
+            }
+            int candidateCenterX = candidate.x + 8;
+            int candidateCenterY = candidate.y + 8;
+            int deltaY = candidateCenterY - currentCenterY;
+            if (directionY < 0 && deltaY >= 0) continue;
+            if (directionY > 0 && deltaY <= 0) continue;
+
+            int rowDistance = Math.abs(deltaY);
+            int columnDistance = Math.abs(candidateCenterX - currentCenterX);
+            if (rowDistance < fallbackPrimary || (rowDistance == fallbackPrimary && columnDistance < fallbackSecondary)) {
+                fallbackPrimary = rowDistance;
+                fallbackSecondary = columnDistance;
+                fallback = candidate;
+            }
+        }
+        return fallback;
+    }
+
+    private static Slot findLaneAlignedSlot(List<Slot> slots, Slot current, int directionX, int directionY) {
+        if (slots == null || current == null || (directionX == 0 && directionY == 0)) {
+            return null;
+        }
+
+        int currentCenterX = current.x + 8;
+        int currentCenterY = current.y + 8;
+        int laneTolerance = 10;
+
+        Slot best = null;
+        int bestPrimary = Integer.MAX_VALUE;
+        int bestSecondary = Integer.MAX_VALUE;
+
+        for (Slot candidate : slots) {
+            if (candidate == null || candidate.id == current.id) {
+                continue;
+            }
+
+            int deltaX = (candidate.x + 8) - currentCenterX;
+            int deltaY = (candidate.y + 8) - currentCenterY;
+
+            if (directionX < 0 && deltaX >= 0) continue;
+            if (directionX > 0 && deltaX <= 0) continue;
+            if (directionY < 0 && deltaY >= 0) continue;
+            if (directionY > 0 && deltaY <= 0) continue;
+
+            int primary;
+            int secondary;
+            if (directionX != 0) {
+                secondary = Math.abs(deltaY);
+                if (secondary > laneTolerance) {
+                    continue;
+                }
+                primary = Math.abs(deltaX);
+            } else {
+                secondary = Math.abs(deltaX);
+                if (secondary > laneTolerance) {
+                    continue;
+                }
+                primary = Math.abs(deltaY);
+            }
+
+            if (primary < bestPrimary || (primary == bestPrimary && secondary < bestSecondary)) {
+                bestPrimary = primary;
+                bestSecondary = secondary;
+                best = candidate;
+            }
+        }
+
+        return best;
+    }
+
     private static void applySelection(Screen screen, List<GuiFocusElement> focusElements, int selectedIndex) {
         for (int i = 0; i < focusElements.size(); i++) {
             ClickableWidget widget = focusElements.get(i).widget();
@@ -402,13 +656,25 @@ public final class GuiNavigationController {
         }
     }
 
-    private static void triggerConfirm(GuiFocusElement selected) {
+    private static void triggerConfirm(
+        GuiFocusElement selected,
+        Consumer<Boolean> virtualKeyboardRequest
+    ) {
         ClickableWidget widget = selected.widget();
+        if (widget instanceof PressableWidget pressableWidget) {
+            // Use the widget's native press path so option/menu buttons always receive controller confirm.
+            pressableWidget.onPress(new KeyInput(GLFW.GLFW_KEY_ENTER, 0, 0));
+            return;
+        }
+
         double centerX = selected.centerX();
         double centerY = selected.centerY();
         Click click = new Click(centerX, centerY, new MouseInput(GLFW.GLFW_MOUSE_BUTTON_LEFT, 0));
         widget.mouseClicked(click, false);
         widget.mouseReleased(click);
+        if (widget instanceof TextFieldWidget && virtualKeyboardRequest != null) {
+            virtualKeyboardRequest.accept(true);
+        }
     }
 
     private static void triggerBack(Screen screen) {
@@ -424,12 +690,25 @@ public final class GuiNavigationController {
         if (screen == null || screen.getScreenHandler() == null) {
             return slots;
         }
+        List<Slot> enabledSlots = new ArrayList<>();
         for (Slot slot : screen.getScreenHandler().slots) {
-            if (slot != null && slot.isEnabled() && slot.canBeHighlighted()) {
+            if (slot == null) {
+                continue;
+            }
+            if (slot.isEnabled()) {
+                enabledSlots.add(slot);
+            }
+            if (slot.isEnabled() && slot.canBeHighlighted()) {
                 slots.add(slot);
             }
         }
-        return slots;
+        if (!slots.isEmpty()) {
+            return slots;
+        }
+        if (!enabledSlots.isEmpty()) {
+            return enabledSlots;
+        }
+        return screen.getScreenHandler().slots;
     }
 
     private static Slot findSlotById(List<Slot> slots, int slotId) {
@@ -446,7 +725,7 @@ public final class GuiNavigationController {
             return null;
         }
         if (client == null || client.player == null) {
-            return slots.getFirst();
+            return slots.get(0);
         }
 
         int selectedHotbar = client.player.getInventory().getSelectedSlot();
@@ -457,7 +736,7 @@ public final class GuiNavigationController {
                 return slot;
             }
         }
-        return slots.getFirst();
+        return slots.get(0);
     }
 
     private static void clickHandledSlot(MinecraftClient client, HandledScreen<?> screen, Slot slot) {
@@ -482,5 +761,52 @@ public final class GuiNavigationController {
             return false;
         }
         return element.keyPressed(new KeyInput(keyCode, 0, modifiers));
+    }
+
+    private void updateControllerCursorCapture(
+        MinecraftClient client,
+        boolean shouldCapture,
+        boolean reinforcePosition
+    ) {
+        if (client == null || client.getWindow() == null) {
+            controllerCursorCaptured = false;
+            return;
+        }
+
+        long handle = client.getWindow().getHandle();
+        if (handle == 0L) {
+            controllerCursorCaptured = false;
+            return;
+        }
+
+        if (shouldCapture) {
+            if (!controllerCursorCaptured) {
+                GLFW.glfwSetInputMode(handle, GLFW.GLFW_CURSOR, GLFW.GLFW_CURSOR_HIDDEN);
+                GLFW.glfwSetCursorPos(handle, 1.0D, 1.0D);
+                controllerCursorCaptured = true;
+                return;
+            }
+            if (reinforcePosition) {
+                GLFW.glfwSetCursorPos(handle, 1.0D, 1.0D);
+            }
+            return;
+        }
+
+        releaseControllerCursorCapture(client);
+    }
+
+    private void releaseControllerCursorCapture(MinecraftClient client) {
+        if (!controllerCursorCaptured) {
+            return;
+        }
+        if (client == null || client.getWindow() == null) {
+            controllerCursorCaptured = false;
+            return;
+        }
+        long handle = client.getWindow().getHandle();
+        if (handle != 0L) {
+            GLFW.glfwSetInputMode(handle, GLFW.GLFW_CURSOR, GLFW.GLFW_CURSOR_NORMAL);
+        }
+        controllerCursorCaptured = false;
     }
 }
